<resources>
    <string name="app_name">Pokémon Calculator</string>
    <string name="Type">Type</string>
    <string name="Form">Form</string>
    <string name="Level">Level</string>
    <string name="defaultLevel">100</string>
    <string name="Base">Base</string>
    <string name="IV">IV</string>
    <string name="EV">EV</string>
    <string name="HP">HP</string>
    <string name="Atk">Attack</string>
    <string name="Def">Defense</string>
    <string name="Spa">Sp. Atk</string>
    <string name="Spd">Sp. Def</string>
    <string name="Spe">Speed</string>
    <string-array name="stats">
        <item>+6</item>
        <item>+5</item>
        <item>+4</item>
        <item>+3</item>
        <item>+2</item>
        <item>+1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
        <item>-3</item>
        <item>-4</item>
        <item>-5</item>
        <item>-6</item>
    </string-array>
    <string name="defaultIV">31</string>
    <string name="zero">0</string>
    <string name="Nature">Nature</string>
    <string name="Ability">Ability</string>
    <string name="Item">Item</string>
    <string name="Status">Status</string>
    <string name="CurrentHP">Current HP</string>
</resources>
