<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

        <Spinner
            android:id="@+id/spinPokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Type"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textType1"
                android:textSize="18sp"
                android:layout_marginLeft="10sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textType2"
                android:textSize="18sp"
                android:layout_marginLeft="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Form"
                android:textSize="18sp"
                android:visibility="invisible"/>
            <Spinner
                android:id="@+id/spinForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_marginLeft="10sp"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3sp">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Level"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/editLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:text="@string/defaultLevel"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="18sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/Base"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IV"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EV"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HP"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textBSHP"
                    android:textSize="18sp"
                    android:layout_marginLeft="10sp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:id="@+id/editIVHP"
                    android:text="@string/defaultIV"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:id="@+id/editEVHP"
                    android:text="@string/zero"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textHP"
                    android:textSize="18sp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Atk"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textBSAtk"
                    android:textSize="18sp"
                    android:layout_marginLeft="10sp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:id="@+id/editIVAtk"
                    android:text="@string/defaultIV"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:id="@+id/editEVAtk"
                    android:text="@string/zero"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textAtk"
                    android:textSize="18sp"/>
                <Spinner
                    android:id="@+id/modifierAtk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/stats"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Def"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textBSDef"
                    android:textSize="18sp"
                    android:layout_marginLeft="10sp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:id="@+id/editIVDef"
                    android:text="@string/defaultIV"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:id="@+id/editEVDef"
                    android:text="@string/zero"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textDef"
                    android:textSize="18sp"/>
                <Spinner
                    android:id="@+id/modifierDef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/stats"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Spa"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textBSSpa"
                    android:textSize="18sp"
                    android:layout_marginLeft="10sp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:id="@+id/editIVSpa"
                    android:text="@string/defaultIV"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:id="@+id/editEVSpa"
                    android:text="@string/zero"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textSpa"
                    android:textSize="18sp"/>
                <Spinner
                    android:id="@+id/modifierSpa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/stats"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Spd"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textBSSpd"
                    android:textSize="18sp"
                    android:layout_marginLeft="10sp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:id="@+id/editIVSpd"
                    android:text="@string/defaultIV"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:id="@+id/editEVSpd"
                    android:text="@string/zero"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textSpd"
                    android:textSize="18sp"/>
                <Spinner
                    android:id="@+id/modifierSpd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/stats"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Spe"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:id="@+id/textBSSpe"
                    android:textSize="18sp"
                    android:layout_marginLeft="10sp"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="2"
                    android:maxLength="2"
                    android:id="@+id/editIVSpe"
                    android:text="@string/defaultIV"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="2"
                    android:maxLength="3"
                    android:id="@+id/editEVSpe"
                    android:text="@string/zero"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:id="@+id/textSpe"
                    android:textSize="18sp"/>
                <Spinner
                    android:id="@+id/modifierSpe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/stats"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3sp">
            <TableRow
                android:layout_marginTop="18sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/Nature"/>
                <Spinner
                    android:id="@+id/spinnerNature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/Ability"/>
                <Spinner
                    android:id="@+id/spinnerAbility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/Item"/>
                <Spinner
                    android:id="@+id/spinnerItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/Status"/>
                <Spinner
                    android:id="@+id/spinnerStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"/>
            </TableRow>
        </TableLayout>

</LinearLayout>

